:memo: :: code fix